--- a/graph.css
+++ b/graph.css
@@ -1,7 +1,13 @@
 /* graph element states */
 
-.active .connection {
-    stroke: #2ecc71;
+.frc .connection {
+    stroke: #101010;
+    stroke-dasharray: 10, 10;
+    stroke-width: 3px;
+}
+
+.mut .connection {
+    stroke: #1010e0;
     stroke-width: 3px;
 }
 
@@ -20,7 +26,6 @@
     fill: #15dddd;
     stroke-width: 3px;
 }
-
 .active.element text {
   stroke: #202020;
 }
@@ -28,7 +33,6 @@
 .nonactive.element rect {
   stroke: #c0c0c0;
 }
-
 .nonactive.element text {
   stroke: #c0c0c0;
 }
@@ -42,83 +46,35 @@
 
 /* document layout */
 
-#paper {
-   position: fixed;
-   top: 0;
-   right: 0;
-   width: 80%;
-   height: 100%;
-   overflow: scroll;
-}
-#list {
-   font-family: monospace;
-   font-size: 11px;
-   padding: 5px;
-}
-#toolbar {
-   position: fixed;
-   width: 250px;
-   top: 0;
-   left: 0;
-   padding: 30px;
-}
-#btn-layout {
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: 14px;
-   color: #323232;
-   padding: 10px 28px;
-   background: -moz-linear-gradient(
-      top,
-    #ffffff 0%,
-    #e1e1e1 50%,
-    #c8c8c8);
-   background: -webkit-gradient(
-      linear, left top, left bottom, 
-    from(#ffffff),
-       color-stop(0.50, #e1e1e1),
-          to(#c8c8c8));
-   -moz-border-radius: 1px;
-   -webkit-border-radius: 1px;
-   border-radius: 1px;
-   border: 1px solid #969696;
-   -moz-box-shadow:
-      0px 1px 3px rgba(000,000,000,0.5),
-    inset 0px 0px 0px rgba(100,100,100,0.6);
-   -webkit-box-shadow:
-      0px 1px 3px rgba(000,000,000,0.5),
-    inset 0px 0px 0px rgba(100,100,100,0.6);
-   box-shadow:
-      0px 1px 3px rgba(000,000,000,0.5),
-    inset 0px 0px 0px rgba(100,100,100,0.6);
-   text-shadow:
-      1px 1px 3px rgba(255,255,255,0.8),
-    10px 10px 0px rgba(255,255,255,0);
-   cursor: pointer;
-}
-#btn-layout:hover {
-   -moz-box-shadow:
-      0px 3px 5px rgba(000,000,000,0.5),
-    inset 0px 0px 0px rgba(100,100,100,0.6);
-   -webkit-box-shadow:
-      0px 3px 5px rgba(000,000,000,0.5),
-    inset 0px 0px 0px rgba(100,100,100,0.6);
-   box-shadow:
-      0px 3px 5px rgba(000,000,000,0.5),
-    inset 0px 0px 0px rgba(100,100,100,0.6);
-}
-#btn-layout:active {
-   background: -moz-linear-gradient(
-      top,
-    #c8c8c8 0%,
-    #e1e1e1 50%,
-    #ffffff);
-   background: -webkit-gradient(
-      linear, left bottom, left top, 
-    from(#ffffff),
-       color-stop(0.50, #e1e1e1),
-          to(#c8c8c8));
+#file {
+  position: fixed;
+  top: 5px;
+  left: 0px;
+  width: 250px;
+  height: 20px;
 }
 
+#paper {
+  overflow: scroll;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  z-index: -1; /*keep it under everything else */
+}
+
+#list {
+  font-family: monospace;
+  font-size: 11px;
+  position: fixed;
+  top: 30px;
+  left: 0px;
+  width: 250px;
+  bottom: 15px;
+}
+
+/* node shadow */
 .element.basic.Rect rect {
    /* Webkit */
    -webkit-svg-shadow: 2px 2px 5px gray;
