--- a/graph.css
+++ b/graph.css
@@ -37,15 +37,14 @@
   height: 20px;
 }
 
-#primaryDisplay {
+#mainDisplay {
   overflow: scroll;
   position: fixed;
-  top: 0px;
+  top: 5px;
   left: 0px;
   right: 0px;
   bottom: 0px;
   z-index: -1; /*keep it under everything else */
-  size: 400%;
 }
 
 #style {
