--- a/graph.css
+++ b/graph.css
@@ -25,7 +25,9 @@
 .marker-arrowheads { display: none }
 
 /* document layout */
-
+foreignObject body {
+  margin: 4px;
+}
 .graphmoviepane {
   padding: 0px;
   border: 0px;
