--- a/graph.css
+++ b/graph.css
@@ -10,14 +10,14 @@
     stroke-width: 3px;
 }
 .active text {
-  stroke: #101010;
+  fill: #101010;
 }
 
 .nonactive rect {
   stroke: #c0c0c0;
 }
 .nonactive text {
-  stroke: #c0c0c0;
+  fill: #c0c0c0;
 }
 
 /* hide link tools we don't need */
