Added paperScroller and Header redesign v1

--- a/graph.css
+++ b/graph.css
@@ -32,7 +32,7 @@
 }
 
 #initcontrols {
-  overflow: hidden;
+  overflow: none;
 }
 
 #list {
@@ -47,3 +47,37 @@
   font-family: monospace;
   font-size: 8px;
 }
+
+#mainDisplay{
+  text-align: center;
+}
+
+/* menu styles */
+.header{
+  padding: 10px;
+  padding-bottom: 15px;
+  letter-spacing: 1.2px;
+  border-bottom: 2px solid #444444;
+  margin-bottom: 15px;
+}
+
+.header-spacing{
+  margin: 0 5px; 
+}
+
+select.header-buttons{
+  padding: 2px;
+  letter-spacing: 1.1px;
+  border-bottom: 2px solid #888888;
+  border-right: 2px solid #888888;
+}
+
+button{
+  padding: 3px;
+  letter-spacing: 1.1px;
+  border-bottom: 2px solid #888888;
+  border-right: 2px solid #888888;
+  border-top: 1px solid #888888;
+  border-left: 1px solid #888888;
+}
+
